добавлены стили bootstrap

--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skystore</title>
-    <!-- Подключите статичеcкие файлы со стилями Bootstrap -->
+<!-- Подключаем статичные файлы со стилями Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
@@ -100,6 +101,7 @@
     </footer>
 </div>
 
-<!-- Подключите статичеcкие файлы со скриптами Bootstrap -->
+<!-- Подключаем статичные файлы со скриптами Bootstrap -->
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
