--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skystore</title>
-    <!-- Подключите статичеcкие файлы со стилями Bootstrap -->
+    <!-- Подключаем статичные файлы со стилями Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
 
 </head>
 <body>
@@ -74,6 +75,7 @@
         </div>
     </footer>
 </div>
-<!-- Подключите статичеcкие файлы со скриптами Bootstrap -->
+<!-- Подключаем статичные файлы со скриптами Bootstrap -->
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
