--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -4,17 +4,17 @@
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        {% for product in products %}
+        {% for product in object_list %}
         <div class="col">
           <div class="card shadow-sm">
             <img src="{{ product.image | media_filter }}">
             <div class="card-body">
               <p class="card-text">{{ product.name }}</p>
-              <p class="card-text">{{ product.description|truncatechars:100 }}</p>
+              <p class="card-text">{{ product.description }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Редактировать</button>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
