В views.py реализован класс ProductCreateView для создания (добавления) продукта

--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -165,9 +165,7 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Каталог продуктов</h1>
         <p class="lead text-body-secondary">супер-пупер каталог продуктов</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          <a class="btn btn-primary" href="{% url 'catalog:product_create' %}" role="button">Добавить продукт</a>
         </p>
       </div>
     </div>
