--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -14,8 +14,8 @@
               <p class="card-text">{{ object.price }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Назад</a>
+
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
