--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -14,7 +14,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Редактировать</button>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_update' product.pk %}" role="button">Редактировать</a>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
