добавлена логика в шаблон product_form.html для кнопки. если создаем объект, то кнопка "Создать", если редактируем - то кнопка "Сохранить"

--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -10,7 +10,11 @@
             {{ form.as_p }}
           </div>
           <button type="submit" class="btn-primary">
+            {% if object %}
+            Coхранить
+            {% else %}
             Создать
+            {% endif %}
           </button>
         </div>
       </form>
