В модуле views.py реализовали class Product ProductDeleteView для удаления продукта. Итак CRUD реализован полностью

--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -15,6 +15,7 @@
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
                   <a class="btn btn-primary" href="{% url 'catalog:product_update' product.pk %}" role="button">Редактировать</a>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
