--- a/blogs/templates/blogs/includes/inc_menu.html
+++ b/blogs/templates/blogs/includes/inc_menu.html
@@ -1,3 +1,4 @@
+<!-- blog/templates/blog/includes/inc_menu.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'blog:blog_home' %}">Блог</a>
