Исправлены ошибки. при регистрации теперь корректно рендерится шаблон login

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,9 +1,7 @@
 {% extends 'catalog/base.html' %}
 
-{% block title %}Регистрация{% endblock %}
-
 {% block content %}
-
+{% block title %}<h1>Регистрация</h1>{% endblock %}
 <div class="container">
   <div class="row">
     <div class="col-6">
