--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,18 +1,20 @@
 {% extends 'catalog/base.html' %}
 
+{% block title %}Logout{% endblock %}
+
 {% block content %}
-{% block title %}<h1>Вход</h1>{% endblock %}
+
 <div class="container">
   <div class="row">
     <div class="col-6">
-      <form class="row" method="post">
+      <form class="row" method="post" enctype="multipart/form-data">
         <div class="card">
           <div class="card-body">
             {% csrf_token %}
             {{ form.as_p }}
           </div>
           <div class="d-flex justify-content-between">
-            <button type="submit" class="btn btn-primary">Войти</button>
+            <button type="submit" class="btn btn-primary">Выйти</button>
           </div>
         </div>
       </form>
