--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,12 +1,13 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-{% block title %}<h1>Регистрация</h1>{% endblock %}
+
 <div class="container">
   <div class="row">
     <div class="col-6">
       <form class="row" method="post" enctype="multipart/form-data">
         <div class="card">
+          <h1>Регистрация</h1>
           <div class="card-body">
             {% csrf_token %}
             {{ form.as_p }}
