--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -8,9 +8,15 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Навигация</h4>
           <ul class="list-unstyled">
-            <li><a href="{% url 'catalog:product_list' %}" class="text-white">Главная</a></li>
-            <li><a href="#" class="text-white">Личный кабинет</a></li>
+            <li><a href="{% url 'catalog:product_list' %}" class="text-white">Каталог продуктов</a></li>
+            <li><a href="{% url 'catalog:product_create' %}" class="text-white">Добавить продукт</a></li>
+            <li><a href="#" class="text-white"></a>Личный кабинет</li>
+            {% if user.is_authenticated %}
+            <li><a href="#" class="text-white">Выйти</a></li>
+            {% else %}
+            <li><a href="#" class="text-white">Войти</a></li>
             <li><a href="#" class="text-white">Регистрация</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
