--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -1,3 +1,4 @@
+<!-- catalog/templates/catalog/includes/inc_menu.html -->
 <div class="collapse text-bg-dark" id="navbarHeader">
     <div class="container">
       <div class="row">
@@ -12,10 +13,15 @@
             <li><a href="{% url 'catalog:product_create' %}" class="text-white">Добавить продукт</a></li>
             <li><a href="#" class="text-white"></a>Личный кабинет</li>
             {% if user.is_authenticated %}
-            <li><a href="#" class="text-white">Выйти</a></li>
+            <li>
+              <form action="{% url 'users:logout' %}" method="post" style="display: inline;">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-link text-white p-0">Выйти</button>
+              </form>
+            </li>
             {% else %}
-            <li><a href="#" class="text-white">Войти</a></li>
-            <li><a href="#" class="text-white">Регистрация</a></li>
+            <li><a href="{% url 'users:login' %}" class="text-white">Войти</a></li>
+            <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
             {% endif %}
           </ul>
         </div>
@@ -25,7 +31,7 @@
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
-
+        <!-- Логотип или название сайта -->
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
