--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -14,13 +14,15 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
-                  <a class="btn btn-primary" href="{% url 'catalog:product_update' product.pk %}" role="button">Редактировать</a>
-
-                  <a class="btn btn-danger" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
-
-
+                  {% if request.user == product.owner or request.user.has_perm 'catalog.change_product' %}
+                      <a class="btn btn-primary" href="{% url 'catalog:product_update' product.pk %}" role="button">Редактировать</a>
+                  {% endif %}
+                  {% if request.user == product.owner or request.user.has_perm 'catalog.delete_product' %}
+                      <a class="btn btn-danger" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
+                  {% endif %}
+                  {% if user.has_perm 'catalog.can_unpublish_product' and product.is_published %}
                       <a class="btn btn-warning" href="{% url 'catalog:product_unpublish' product.pk %}" role="button">Отменить публикацию</a>
-
+                  {% endif %}
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
